Mon Sep 22 17:42:23 2003  Dale Wilson  <wilson_d@ociweb.com>
        * orbsvcs/test/FT_App/FT_ReplicaFactory_i.cpp
        * orbsvcs/test/FT_App/FT_ReplicaFactory_i.h
        * orbsvcs/test/FT_App/FT_ReplicaFactory_i.cpp
        * orbsvcs/test/FT_App/FT_Replica.cpp
          Implement GenericFactory to create test replicas.

        These changes were made in the oci_haft branch.

Mon Sep 22 17:05:31 2003  Dale Wilson  <wilson_d@ociweb.com>

        * orbsvcs/Fault_Notifier/Fault_Notifier.mpc:
          Fixing some library dependancies.  Nothing significant.

        These changes were made in the oci_haft branch.


Sat Sep 20 16:46:29 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientRequest_Interceptor.cpp:
          Added explicit template specifications.

        * orbsvcs/orbsvcs/FaultTolerance/FT_IOGR_Property.cpp:
        * orbsvcs/orbsvcs/FaultTolerance/FT_IOGR_Property.h: Added
          exception specification for  get_tagged_components ().

        * orbsvcs/tests/FaultTolerance/IOGRManipulation/IOGRTest.cpp:
          Test for get_tagged_components () added.

Fri Sep 19 20:02:13 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.cpp:
        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.h:
        * orbsvcs/Fault_Notifier/FT_Notifier_i.h: Did a 20000 feet level
          code review and left comments for OCI folks. More needs to be
          done.

        * orbsvcs/orbsvcs/Makefile.CosLoadBalancing:
        * orbsvcs/orbsvcs/Makefile.PortableGroup: Added an -I for the IDL
          compiler to include orbsvcs

        * orbsvcs/orbsvcs/PortableGroup/PG_GenericFactory.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_ObjectGroup_Map.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_PropertyManager.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_Property_Utils.cpp: Fixed